--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,32 @@
+<head>
+  <title>質問共有</title>
+
+</head>
 <h1>過去問共有</h1>
 
+<h2><%= @university %></h2>
+<br>
 
+<%#<%= form_for '/fileuploads', method: 'post', multipart: true do %>
 
+<%#   	    <%= file_field :fileupload, :file %>
+<%#    <%= submit_tag 'Send file' %>　
+<%#　<% end %>
 
+<% @upload = UploadFile.new %>
+<%= form_for @upload, :url => {:action => :upload} do |f| %>
+    <%= f.label :name, "name" %>
+    <%= f.text_field :name %>
+    <%= f.label :file %>
+    <%= f.file_field :file %>
+    <%= f.submit "Upload" %>
+<% end %>
 
-<p>Find me in app/views/main/index.html.erb</p>
+<h2>新着一覧</h2>
+<% UploadFile.all.reverse_order.each do |upload| %>
+  <li><%= link_to upload.name, action: "download", id: upload.id %>
+<% end %>
+
+<%#<% Content.all.reverse_order.each do |content| %>
+<%#   <li><%= link_to content.lesson, action: "download", id: content.id %>
+<%#<% end %>
