一旦バックエンドいい感じ

--- a/app/views/main/each_univ.html.erb
+++ b/app/views/main/each_univ.html.erb
@@ -19,7 +19,7 @@
       </div>
 
       <div class="univ_name">
-        <h3><%= @university %></h3>
+        <h3><%= @university.university %></h3>
       </div>
     </div>
 
