--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -43,10 +43,12 @@
           })
       })
   </script>
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/application.css">
   </head>
   <body>
-    <header>
-      <h1>過去問共有</h1>
+  <div class="page">
+    <header class="header">
+      <h1 class="title">カコモン共有</h1>
     </header>
 
     <div class="main">
@@ -114,14 +116,18 @@
             <input type="submit" value="検索">
          </form>
       </div>
+
       <div class="file_new_tw">
-        <div class="file_new">
-          <h2>新着順</h2>
-        </div>
-        <div class="tw">
-          <h2>ここにTwitterを載せるよ</h2>
-        </div>
+         <div class="file_new">
+           <h2>新着順</h2>
+         </div>
+         <div class="tw">
+           <h2>ここにTwitterを載せるよ</h2>
+         </div>
       </div>
+
+    </div>
     </div>
   </body>
+
 </html>
