--- a/app/views/main/each_univ.html.erb
+++ b/app/views/main/each_univ.html.erb
@@ -5,18 +5,17 @@
     <title></title>
   </head>
   <body>
-    <header>
-      <div class="title">
-        <h1>過去問共有</h1>
-        <p>クリックしたらダウンロードが開始されます</p>
-      </div>
+    <header class="header">
+      <h1 class="title">カコモン共有</h1>
     </header>
 
-  <div class="main_flame">
-
+  <div class="main">
     <div class="univ_flame">
+      <div class="discription">
+        <p>クリックしたらダウンロードが始まります</p>
+      </div>
       <div class="univ_name">
-        <h3><%= @university + "　　" + @department + "　　" + @major %></h3>
+        <h1><%= @university + "　　" + @department + "　　" + @major %></h1>
       </div>
     </div>
 
