新着順の修正

--- a/app/views/main/each_univ.html.erb
+++ b/app/views/main/each_univ.html.erb
@@ -21,7 +21,7 @@
 
     <div class="list_flame">
       <ul>
-        <% @contents.each do |content| %>
+        <% @contents.reverse.each do |content| %>
         <li><%= link_to(content.lesson + " " + content.year.to_s + "年", action: "download", id: content.id) %>
         <% end %>
       </ul>
